--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,12 +22,17 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     generate-ddl: true
     properties:
       hibernate:
         format_sql: true
         show_sql: true
+  security:
+    thymeleaf:
+      extras:
+        springsecurity5:
+          order: 0
 logging:
   level:
     org:
