--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     generate-ddl: true
     properties:
       hibernate:
@@ -39,7 +39,8 @@ logging:
       hibernate: info
       thymeleaf: off
 
-#custom
 custom:
   cafe:
     member_limit: 100
+  img:
+    default_Img: https://kr.object.ncloudstorage.com/calocheck/sample/sample_img_no.png
